seaqt/QtWidgets/gen_qstackedlayout.nim


proc fcQStackedLayout_new(parent: pointer): ptr cQStackedLayout {.importc: "QStackedLayout_new".}
proc fcQStackedLayout_new2(): ptr cQStackedLayout {.importc: "QStackedLayout_new2".}
proc fcQStackedLayout_new3(parentLayout: pointer): ptr cQStackedLayout {.importc: "QStackedLayout_new3".}
proc fcQStackedLayout_metaObject(self: pointer, ): pointer {.importc: "QStackedLayout_metaObject".}
proc fcQStackedLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QStackedLayout_metacast".}
proc fcQStackedLayout_tr(s: cstring): struct_miqt_string {.importc: "QStackedLayout_tr".}
proc fcQStackedLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QStackedLayout_trUtf8".}
proc fcQStackedLayout_addWidget(self: pointer, w: pointer): cint {.importc: "QStackedLayout_addWidget".}
proc fcQStackedLayout_insertWidget(self: pointer, index: cint, w: pointer): cint {.importc: "QStackedLayout_insertWidget".}
proc fcQStackedLayout_currentWidget(self: pointer, ): pointer {.importc: "QStackedLayout_currentWidget".}
proc fcQStackedLayout_currentIndex(self: pointer, ): cint {.importc: "QStackedLayout_currentIndex".}
proc fcQStackedLayout_widget(self: pointer, param1: cint): pointer {.importc: "QStackedLayout_widget".}
proc fcQStackedLayout_count(self: pointer, ): cint {.importc: "QStackedLayout_count".}
proc fcQStackedLayout_stackingMode(self: pointer, ): cint {.importc: "QStackedLayout_stackingMode".}
proc fcQStackedLayout_setStackingMode(self: pointer, stackingMode: cint): void {.importc: "QStackedLayout_setStackingMode".}
proc fcQStackedLayout_addItem(self: pointer, item: pointer): void {.importc: "QStackedLayout_addItem".}
proc fcQStackedLayout_sizeHint(self: pointer, ): pointer {.importc: "QStackedLayout_sizeHint".}
proc fcQStackedLayout_minimumSize(self: pointer, ): pointer {.importc: "QStackedLayout_minimumSize".}
proc fcQStackedLayout_itemAt(self: pointer, param1: cint): pointer {.importc: "QStackedLayout_itemAt".}
proc fcQStackedLayout_takeAt(self: pointer, param1: cint): pointer {.importc: "QStackedLayout_takeAt".}
proc fcQStackedLayout_setGeometry(self: pointer, rect: pointer): void {.importc: "QStackedLayout_setGeometry".}
proc fcQStackedLayout_hasHeightForWidth(self: pointer, ): bool {.importc: "QStackedLayout_hasHeightForWidth".}
proc fcQStackedLayout_heightForWidth(self: pointer, width: cint): cint {.importc: "QStackedLayout_heightForWidth".}
proc fcQStackedLayout_widgetRemoved(self: pointer, index: cint): void {.importc: "QStackedLayout_widgetRemoved".}
proc fcQStackedLayout_connect_widgetRemoved(self: pointer, slot: int) {.importc: "QStackedLayout_connect_widgetRemoved".}
proc fcQStackedLayout_currentChanged(self: pointer, index: cint): void {.importc: "QStackedLayout_currentChanged".}
proc fcQStackedLayout_connect_currentChanged(self: pointer, slot: int) {.importc: "QStackedLayout_connect_currentChanged".}
proc fcQStackedLayout_setCurrentIndex(self: pointer, index: cint): void {.importc: "QStackedLayout_setCurrentIndex".}
proc fcQStackedLayout_setCurrentWidget(self: pointer, w: pointer): void {.importc: "QStackedLayout_setCurrentWidget".}
proc fcQStackedLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QStackedLayout_tr2".}
proc fcQStackedLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QStackedLayout_tr3".}
proc fcQStackedLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QStackedLayout_trUtf82".}
proc fcQStackedLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QStackedLayout_trUtf83".}
proc fQStackedLayout_virtualbase_count(self: pointer, ): cint{.importc: "QStackedLayout_virtualbase_count".}
proc fcQStackedLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_count".}
proc fQStackedLayout_virtualbase_addItem(self: pointer, item: pointer): void{.importc: "QStackedLayout_virtualbase_addItem".}
proc fcQStackedLayout_override_virtual_addItem(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_addItem".}
proc fQStackedLayout_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_sizeHint".}
proc fcQStackedLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_sizeHint".}
proc fQStackedLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_minimumSize".}
proc fcQStackedLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_minimumSize".}
proc fQStackedLayout_virtualbase_itemAt(self: pointer, param1: cint): pointer{.importc: "QStackedLayout_virtualbase_itemAt".}
proc fcQStackedLayout_override_virtual_itemAt(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_itemAt".}
proc fQStackedLayout_virtualbase_takeAt(self: pointer, param1: cint): pointer{.importc: "QStackedLayout_virtualbase_takeAt".}
proc fcQStackedLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_takeAt".}
proc fQStackedLayout_virtualbase_setGeometry(self: pointer, rect: pointer): void{.importc: "QStackedLayout_virtualbase_setGeometry".}
proc fcQStackedLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_setGeometry".}
proc fQStackedLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QStackedLayout_virtualbase_hasHeightForWidth".}
proc fcQStackedLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_hasHeightForWidth".}
proc fQStackedLayout_virtualbase_heightForWidth(self: pointer, width: cint): cint{.importc: "QStackedLayout_virtualbase_heightForWidth".}
proc fcQStackedLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_heightForWidth".}
proc fQStackedLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QStackedLayout_virtualbase_invalidate".}
proc fcQStackedLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_invalidate".}
proc fQStackedLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_geometry".}
proc fcQStackedLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_geometry".}
proc fQStackedLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QStackedLayout_virtualbase_expandingDirections".}
proc fcQStackedLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_expandingDirections".}
proc fQStackedLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_maximumSize".}
proc fcQStackedLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_maximumSize".}
proc fQStackedLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QStackedLayout_virtualbase_indexOf".}
proc fcQStackedLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_indexOf".}
proc fQStackedLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QStackedLayout_virtualbase_isEmpty".}
proc fcQStackedLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_isEmpty".}
proc fQStackedLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QStackedLayout_virtualbase_controlTypes".}
proc fcQStackedLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_controlTypes".}
proc fQStackedLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_layout".}
proc fcQStackedLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_layout".}
proc fQStackedLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QStackedLayout_virtualbase_childEvent".}
proc fcQStackedLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_childEvent".}
proc fQStackedLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QStackedLayout_virtualbase_event".}
proc fcQStackedLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_event".}
proc fQStackedLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QStackedLayout_virtualbase_eventFilter".}
proc fcQStackedLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_eventFilter".}
proc fQStackedLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QStackedLayout_virtualbase_timerEvent".}
proc fcQStackedLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_timerEvent".}
proc fQStackedLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QStackedLayout_virtualbase_customEvent".}
proc fcQStackedLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_customEvent".}
proc fQStackedLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QStackedLayout_virtualbase_connectNotify".}
proc fcQStackedLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_connectNotify".}
proc fQStackedLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QStackedLayout_virtualbase_disconnectNotify".}
proc fcQStackedLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_disconnectNotify".}
proc fQStackedLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QStackedLayout_virtualbase_minimumHeightForWidth".}
proc fcQStackedLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_minimumHeightForWidth".}
proc fQStackedLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_widget".}
proc fcQStackedLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_widget".}
proc fQStackedLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QStackedLayout_virtualbase_spacerItem".}
proc fcQStackedLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QStackedLayout_override_virtual_spacerItem".}
proc fcQStackedLayout_delete(self: pointer) {.importc: "QStackedLayout_delete".}


func init*(T: type gen_qstackedlayout_types.QStackedLayout, h: ptr cQStackedLayout): gen_qstackedlayout_types.QStackedLayout =
  T(h: h)
proc create*(T: type gen_qstackedlayout_types.QStackedLayout, parent: gen_qwidget_types.QWidget): gen_qstackedlayout_types.QStackedLayout =
  gen_qstackedlayout_types.QStackedLayout.init(fcQStackedLayout_new(parent.h))

proc create*(T: type gen_qstackedlayout_types.QStackedLayout, ): gen_qstackedlayout_types.QStackedLayout =
  gen_qstackedlayout_types.QStackedLayout.init(fcQStackedLayout_new2())

proc create*(T: type gen_qstackedlayout_types.QStackedLayout, parentLayout: gen_qlayout_types.QLayout): gen_qstackedlayout_types.QStackedLayout =
  gen_qstackedlayout_types.QStackedLayout.init(fcQStackedLayout_new3(parentLayout.h))

proc metaObject*(self: gen_qstackedlayout_types.QStackedLayout, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQStackedLayout_metaObject(self.h))

proc metacast*(self: gen_qstackedlayout_types.QStackedLayout, param1: cstring): pointer =
  fcQStackedLayout_metacast(self.h, param1)
